fixed header titile position issue and overflow element in footer

--- a/Spa/src/UI/Footer/Footer.scss
+++ b/Spa/src/UI/Footer/Footer.scss
@@ -10,6 +10,7 @@
 
 .footer-content-wrapper {
 
+  box-sizing: border-box;
   padding: 30px 10px;
 
   @media only screen and (min-width: $mobileLSize + "px") and (max-width: $tabletSize + "px") {
