--- a/Spa/src/UI/Header/Header.scss
+++ b/Spa/src/UI/Header/Header.scss
@@ -15,6 +15,12 @@
   justify-content: center;
 }
 
+.header-title-link {
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
 .header-title {
-  
+  margin: 0;
 }
